[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "poseviz"
dynamic = ["version"]
description = "3D human pose visualizer with multi-person, multi-view support."
authors = [
    { name = "István Sárándi", email = "istvan.sarandi@uni-tuebingen.de" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    'opencv-python',
    'numpy',
    'moderngl',
    'glfw',
    'deltacamera>=0.7.0',
    # GLVideoWriter and the start_sequence(gpu=...) API require 0.2.0
    'framepump>=0.2.0',
    'simplepyutils',
    'numba',
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"poseviz.gl.shaders" = ["*.vert", "*.frag", "*.geom"]
"poseviz.gl.renderables" = ["*.npz"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
version_file = "src/poseviz/_version.py"

[tool.black]
line-length = 99
skip-string-normalization = true
